--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ html, body {
 	position: fixed;
 	width: 130vw;
 	transform: translateX(30vw);
-	transition: all 1.2s cubic-bezier(0.22, 0.44, 0, 1);
+	transition: all 3s cubic-bezier(0.22, 0.44, 0, 1);
 }
 .background:before {
 	content: "";
@@ -41,17 +41,31 @@ html, body {
 .background:nth-child(3) {
   	background-image: url("../assets/image3.svg");
 }
+.background:nth-child(4) {
+  	background-image: url("../assets/image4.svg");
+}
+.background:nth-child(5) {
+  	background-image: url("../assets/image5.svg");
+}
 
 /* Set stacking context of slides */
 .background:nth-child(1) {
-  	z-index: 3;
+  	z-index: 5;
 }
 
 .background:nth-child(2) {
-  	z-index: 2;
+  	z-index: 4;
 }
 
 .background:nth-child(3) {
+  	z-index: 3;
+}
+
+.background:nth-child(4) {
+  	z-index: 2;
+}
+
+.background:nth-child(5) {
   	z-index: 1;
 }
 
